--- a/Projeto_Telecom-2023-Final.ipynb
+++ b/Projeto_Telecom-2023-Final.ipynb
@@ -19,7 +19,7 @@
    },
    "source": [
     "# Projeto com Feedback \n",
-    "### Prevendo o Nível de Satisfação dos Clientes do Santander"
+    "### Prevendo Customer Churn em Operadoras de Telecom"
    ]
   },
   {
@@ -28,14 +28,13 @@
     "hidden": true
    },
    "source": [
-    "A satisfação do cliente é uma medida fundamental de sucesso. Clientes insatisfeitos cancelam seus serviços e raramente expressam sua insatisfação antes de sair. Clientes satisfeitos, por outro lado, se tornam defensores da marca!\n",
+    "Customer Churn (ou Rotatividade de Clientes, em uma tradução livre) refere-se a uma decisão tomada pelo cliente sobre o término do relacionamento comercial. Refere-se também à perda de clientes. A fidelidade do cliente e a rotatividade de clientes sempre somam 100%. Se uma empresa tem uma taxa de fidelidade de 60%, então a taxa de perda de clientes é de 40%. De acordo com a regra de lucratividade do cliente 80/20, 20% dos clientes estão gerando 80% da receita. Portanto, é muito importante prever os usuários que provavelmente abandonarão o relacionamento comercial e os fatores que afetam as decisões do cliente.\n",
     "\n",
-    "O Banco Santander está pedindo para ajudá-los a identificar clientes insatisfeitos no início do relacionamento. Isso permitiria que o Santander adotasse medidas proativas para melhorar a felicidade de um cliente antes que seja tarde \n",
-    "demais.\n",
+    "Neste projeto, você deve prever o Customer Churn em uma Operadora de Telecom.\n",
     "\n",
-    "Neste projeto de aprendizado de máquina, você trabalhará com centenas de recursos anônimos para prever se um cliente está satisfeito ou insatisfeito com sua experiência bancária.\n",
+    "Os datasets de treino e de teste serão fornecidos para você em anexo a este projeto. Seu trabalho é criar um modelo de aprendizagem de máquina que possa prever se um cliente pode ou não cancelar seu plano e qual a probabilidade de isso ocorrer. O cabeçalho do dataset é uma descrição do tipo de informação em cada coluna.\n",
     "\n",
-    "Defina claramente o problema de negócio, faça a coleta e preparo dos dados, escolha um algoritmo, treine o modelo e avalie a acurácia, que deve ser de pelo menos 70%.\n",
+    "Usando linguagem Python, recomendamos você criar um modelo de Regressão Logística, para extrair a informação se um cliente vai cancelar seu plano (Sim ou Não) e a probabilidade de uma opção ou outra.\n",
     "\n",
     "Conheça a DSA\n",
     "\n",
